<?xml version="1.0"?>
<package format="2">
  <name>oled_display_node</name>
  <version>1.1.1</version>
  <description>OLED I2C display node package</description>

  <maintainer email="mj@ubiquityrobotics.com">Mark Johnston</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
